@@ -15,11 +15,9 @@ For the 1.4.13 release:
 1904965 - check_apt: SECURITY_RE is not correct
 1894850 - check_ping: incorrectly parses ping6 output
 1868822 - check_http link fails with openssl installed
-1867716 - check_snmp invalid performance data
 1864404 - check_smtp/check_http miscalculate timezones in cert expiry
 1681516 - output too verbose for various checks
 1670261 - check_snmp might require snmpget with LD_LIBRARY_PATH
-1569488 - check_ifoperstatus.pl: -n option does't work (help required!)
 1523748 - check_disk should error if warn range is subset of critical
 1478287 - check_dns fails with CNAMEs
 1469468 - signal handler in popen.c is broken
